Fix: Center start screen on mobile by using column-flex and and fixing div nesting

--- a/style.css
+++ b/style.css
@@ -863,6 +863,7 @@ header {
   inset: 0;
   background: var(--bg-main);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 999;
